--- a/style.css
+++ b/style.css
@@ -16,6 +16,12 @@ body{
 
 }
 
+#btn:hover{
+
+    cursor: pointer;
+
+}
+
 .container{
 
     width: 500px;
@@ -27,10 +33,10 @@ body{
 
 }
 
-#btn3{
+#btn2{
 
     color: black;
     background-color: red;
-    margin-left: 200px;
+    margin-left: 400px;
 
 }
